--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Курсовой проект learn.javascript.ru</title>
+        <title>Список дел</title>
         <!--
         <meta charset="utf-8" />
         -->
