--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
         </script>
     </head>
     <body>
-        <div class="myApp"></div>
-        <div class="app js-app">
-            <div class="js-menu"></div>
-            <div class="js-form"></div>
+        <div align="center">
+            <div class="centerLayer">
+                <div class="js-app">
+                    <div class="js-menu"></div>
+                    <div class="js-form"></div>
+                </div>
+            </div>
         </div>
-
 
         <script src="components/form/form.js"></script>
         <script src="components/menu/menu.js"></script>
