--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <body>
         <div class="baseLayer">
             <div class="centerLayer">
-                <div class="js-app">
-                    <div class="js-menu"></div>
+                <div class="js-app">v0.1
                     <div class="js-form"></div>
+                    <div class="js-menu"></div>
                 </div>
                 <div class="js-app2">
-                    <div class="js-menu2"></div>
                     <div class="js-form2"></div>
+                    <div class="js-menu2"></div>
                 </div>                
             </div>
         </div>
