--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </div>
 
         <script src="components/form/form.js"></script>
+
+        <script src="components/menu/menuItem.pug.js"></script>
+        <script src="components/menu/menu.pug.js"></script>
         <script src="components/menu/menu.js"></script>
         <script src="components/app/app.js"></script>
         
