--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="components/app/app.css">
         <link rel="stylesheet" href="components/form/form.css">
         <link rel="stylesheet" href="components/menu/menu.css">
@@ -17,6 +18,16 @@
                     <div class="js-form"></div>
                     <div class="js-menu"></div>
                 </div>
+                <div class="div-media-style">
+                    <img src="components/img/sb_01.jpg" title="Image 1" class="map__img img-style im-1">
+                    <img src="components/img/sb_02.jpg" title="Image 2" class="map__img img-style next im-2">
+                    <img src="components/img/sb_03.jpg" title="Image 3" class="map__img img-style next im-3">
+                    <img src="components/img/sb_04.jpg" title="Image 4" class="map__img img-style next im-4">
+                    <audio controls="controls" src="ttp2.mp3">
+                            <source src="ttp2.mp3" type="audio/mpeg">
+                    </audio>
+                </div>
+
             </div>
         </div>
 
@@ -32,6 +43,8 @@
             "use strict";
             new window.App({el: document.querySelector('.js-app')});
         </script>
+
+
 
     </body>
 </html>
